// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/FileUploader Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r6:"
            class="_dropZone_10i3l_14"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r6:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r7:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5 dummyClassname"
       lang="en"
       data-testid="123ID"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id="htmlId"
            class="_dropZone_10i3l_14"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for="htmlId"
        >
          Legg til fil
        </label>
        <input data-testid="123ID-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r4:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5  dummyClassname">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r2a:"
            class="_dropZone_10i3l_14  _dropZone_error_10i3l_31"
            aria-describedby=":r2b:-fileuploader-error"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r2a:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r2b:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15 dummyClassname">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          feil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithError play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for=":rt:"
    >
      Hemmelig kode
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:rv:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r10:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r10:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rt:"
            class="_dropZone_10i3l_14 _dropZoneMarginTop_10i3l_28 _dropZone_error_10i3l_31"
            aria-describedby=":ru:-fileuploader-error :rt:-accepted-formats"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":rt:"
        >
          Legg til fil(er)
        </label>
        <input data-testid="undefined-input"
               accept=".java, .cpp, .py"
               multiple
               hidden
               type="file"
        >
      </div>
    </button>
    <span id=":rt:-accepted-formats"
          class="_fileInfo_10i3l_56"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_10i3l_73">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":ru:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Du må laste opp en fil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithFileChange play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5"
       data-testid="testid123"
  >
    <label id="labelId-:r1v:"
           class="_label_348na_5"
           for=":r1t:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r1v:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r20:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r20:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1t:"
            class="_dropZone_10i3l_14 _dropZoneMarginTop_10i3l_28"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r1t:"
        >
          Legg til fil
        </label>
        <input data-testid="testid123-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r1u:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_10i3l_77">
      <li id=":r22:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r23:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r23:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <a id=":r22:-file-file.txt"
                   class="_link_z7jba_1"
                   href="#"
                   download
                >
                  file.txt
                </a>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r22:-file-file.txt"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r24:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r24:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
      Kunne ikke fjerne fil
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <label id="labelId-:r27:"
           class="_label_348na_5"
           for=":r25:"
    >
      Last opp filer
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r27:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r28:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r28:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r25:"
            class="_dropZone_10i3l_14 _dropZoneMarginTop_10i3l_28"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r25:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r26:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithIsUploading smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rq:"
            class="_dropZone_10i3l_14"
            disabled
    >
      <div class="_removePointerEvents_10i3l_83">
        <div aria-live="polite"
             aria-atomic="true"
             class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28"
        >
          <div class="_spinnerAnimation_wnf1f_40">
          </div>
          <span id="title-:rs:"
                class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 _spinner_10i3l_91"
          >
            Opplasting pågår
          </span>
        </div>
        <label class="_innerLabel_10i3l_97"
               for=":rq:"
        >
        </label>
        <input data-testid="undefined-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":rr:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5"
       id="dummyIdForwardedFromRef"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r0:"
            class="_dropZone_10i3l_14"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r0:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               hidden
               type="file"
        >
      </div>
    </button>
    <div id=":r1:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithTextOverrides play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1n:"
            class="_dropZone_10i3l_14"
            aria-describedby=":r1n:-accepted-formats"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r1n:"
        >
          Trykk eller dra og slipp filer her
        </label>
        <input data-testid="undefined-input"
               accept="image/png"
               hidden
               type="file"
        >
      </div>
    </button>
    <span id=":r1n:-accepted-formats"
          class="_fileInfo_10i3l_56"
    >
      Tillatte filformater:_
      <span class="_fileFormatList_10i3l_73">
        bilder og dokumenter
      </span>
    </span>
    <div id=":r1o:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_10i3l_77">
      <li id=":r1q:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1r:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1r:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <span id=":r1q:-file-document.pdf">
                  document.pdf
                </span>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r1q:-file-document.pdf"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r1s:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r1s:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadResult smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5 bottomSpacingXL">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r13:"
            class="_dropZone_10i3l_14"
            aria-describedby=":r13:-accepted-formats"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r13:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               accept=".java, .cpp, .py"
               hidden
               type="file"
        >
      </div>
    </button>
    <span id=":r13:-accepted-formats"
          class="_fileInfo_10i3l_56"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_10i3l_73">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":r14:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_lurqs_1 _alert_10i3l_87"
           data-variant="success"
           data-brightness="default"
      >
        <span class="_iconWrapper_lurqs_8">
          <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_lurqs_8"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
            </path>
          </svg>
        </span>
        <span class="_content_lurqs_17">
          Lastet opp 4 filer
        </span>
      </div>
    </div>
    <ul class="_fileList_10i3l_77">
      <li id=":r17:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <a id=":r17:-file-dokumentasjon.pdf"
                   class="_link_z7jba_1"
                   href="https://www.skatteetaten.no/person/"
                   download
                >
                  dokumentasjon.pdf
                </a>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r17:-file-dokumentasjon.pdf"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r19:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r19:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
      <li id=":r1a:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1b:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1b:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <span id=":r1a:-file-grunnlag.jpg">
                  grunnlag.jpg
                </span>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r1a:-file-grunnlag.jpg"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r1c:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r1c:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
  <div class="_container_10i3l_5">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1d:"
            class="_dropZone_10i3l_14"
            aria-describedby=":r1d:-accepted-formats"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r1d:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               accept=".java, .cpp, .py"
               hidden
               type="file"
        >
      </div>
    </button>
    <span id=":r1d:-accepted-formats"
          class="_fileInfo_10i3l_56"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_10i3l_73">
        .java, .cpp, .py
      </span>
    </span>
    <div id=":r1e:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_lurqs_1 _alert_10i3l_87"
           data-variant="error"
           data-brightness="default"
      >
        <span class="_iconWrapper_lurqs_8">
          <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_lurqs_8"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27zM13 16h-2v-2h2zm0-4h-2V8h2z">
            </path>
          </svg>
        </span>
        <span class="_content_lurqs_17">
          1 av 3 filer ble stoppet av virussjekk.
        </span>
      </div>
    </div>
    <ul class="_fileList_10i3l_77">
      <li id=":r1h:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1i:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1i:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <a id=":r1h:-file-dokumentasjon.pdf"
                   class="_link_z7jba_1"
                   href="https://www.skatteetaten.no/person/"
                   download
                >
                  dokumentasjon.pdf
                </a>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r1h:-file-dokumentasjon.pdf"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r1j:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r1j:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
      <li id=":r1k:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1l:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1l:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <span id=":r1k:-file-grunnlag.jpg">
                  grunnlag.jpg
                </span>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":r1k:-file-grunnlag.jpg"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:r1m:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:r1m:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadedFiles play-test 1`] = `
<div data-test-block="true">
  <div class="_container_10i3l_5">
    <label id="labelId-:rb:"
           class="_label_348na_5"
           for=":r9:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:rb:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rc:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rc:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r9:"
            class="_dropZone_10i3l_14 _dropZoneMarginTop_10i3l_28"
            aria-describedby=":r9:-accepted-formats"
    >
      <div class="_removePointerEvents_10i3l_83">
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_10i3l_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_10i3l_97"
               for=":r9:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               accept=".pdf, .jpeg"
               hidden
               type="file"
        >
      </div>
    </button>
    <span id=":r9:-accepted-formats"
          class="_fileInfo_10i3l_56"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_10i3l_73">
        .pdf, .jpeg
      </span>
    </span>
    <div id=":ra:-fileuploader-error"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_10i3l_77">
      <li id=":re:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rf:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rf:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <a id=":re:-file-dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf"
                   class="_link_z7jba_1"
                   href="https://www.skatteetaten.no/person/"
                   download
                >
                  dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf
                </a>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":re:-file-dokumentasjon_rapport_med_langt_filnavn_v2_final.pdf"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:rg:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:rg:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
      <li id=":rh:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ri:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ri:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <span id=":rh:-file-grunnlag.jpg">
                  grunnlag.jpg
                </span>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":rh:-file-grunnlag.jpg"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:rj:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:rj:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
      <li id=":rk:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <span id=":rk:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg">
                  Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg
                </span>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":rk:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:rm:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:rm:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
      <li id=":rn:"
          class="_fileListItem_15fus_108"
      >
        <div class="_card_lg4k9_5 _fileCard_15fus_26"
             data-color="white"
             data-spacing="xxs"
        >
          <div class="_cardContent_qt0f6_1">
            <div class="_fileContentContainer_15fus_20">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _fileListIcon_15fus_116"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ro:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ro:">
                  Fil
                </title>
                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm0 2h7v5h5v11H6V4Zm2 8v2h8v-2H8Zm0 4v2h5v-2H8Z">
                </path>
              </svg>
              <div class="_fileNameContainer_15fus_14">
                <a id=":rn:-file-test.png"
                   class="_link_z7jba_1"
                   href="http://localhost:4400/designsystem_illustrasjon.png"
                   download
                >
                  test.png
                </a>
              </div>
            </div>
            <div class="_rightContent_qt0f6_17 _fileContentRight_15fus_10">
              <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _fileDeleteButton_15fus_6"
                      data-brightness="default"
                      type="button"
                      aria-describedby=":rn:-file-test.png"
              >
                <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-labelledby="svgtitle-:rp:"
                     aria-hidden="false"
                     role="img"
                >
                  <title id="svgtitle-:rp:">
                    Fjern fil
                  </title>
                  <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div class="_srOnly_10i3l_61"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
